<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"><item android:id="@+id/action_new" android:title="@string/new_entry" android:icon="@drawable/ic_plus" app:showAsAction="always"/></menu>
